Closed Bug 359081 Opened 19 years ago Closed 19 years ago

[BeOS] iframe scrolling broken in 1.8 branch including Firefox 2.0

Categories

(Core Graveyard :: Widget: BeOS, defect)

1.8 Branch
x86
BeOS
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: doug, Assigned: doug)

References

()

Details

(Keywords: fixed1.8.1.1)

Attachments

(1 file)

Very minor difference between branch and trunk broke iframe scrolling in branch. URL above is good test. Position cursor over iframe in middle, scroll using scroll wheel. Entire page scrolls, not iframe.
Changes refPoint to point at two locations. BeOS uses refPoint. Back-ported scrolling code missed this when posted to branch.
Attachment #244338 - Flags: review?(sergei_d)
Comment on attachment 244338 [details] [diff] [review] Fixes scrolling in branch build r=sergei_d only strabge thing is CVS diff activity about missing line end in end of file. It never warned us before in this file such way. Are you moved to use new editor? Anyway, I will look at it again at checkin
Attachment #244338 - Flags: review?(sergei_d) → review+
Comment on attachment 244338 [details] [diff] [review] Fixes scrolling in branch build This is a BeOS-only change. Not sure whether checkins are still allowed on 1.8.1. If not, we'd like to include this in 1.8.1.1. Thanks!
Attachment #244338 - Flags: approval1.8.1?
Attachment #244338 - Flags: approval1.8.1.1?
Attachment #244338 - Flags: approval1.8.1?
Comment on attachment 244338 [details] [diff] [review] Fixes scrolling in branch build approved for 1.8 branch, a=dveditz for drivers
Attachment #244338 - Flags: approval1.8.1.1? → approval1.8.1.1+
cvs ci -r MOZILLA_1_8_BRANCH: Checking in mozilla/widget/src/beos/nsWindow.cpp; /cvsroot/mozilla/widget/src/beos/nsWindow.cpp,v <-- nsWindow.cpp new revision: 1.91.4.25; previous revision: 1.91.4.24 done
Status: NEW → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1.1
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: