[BeOS] iframe scrolling broken in 1.8 branch including Firefox 2.0, Bug 359081, p=doug@sheltonfamily.org, r=sergei_d, approval1.8.1.1=dveditz. BeOS-only change